--- a/povToy/Makefile
+++ b/povToy/Makefile
@@ -4,8 +4,8 @@
 ##########    Check these every time you start a new project    ##########
 ##########------------------------------------------------------##########
 
-MCU   = m328
-F_CPU = 8000000UL  
+MCU   = atmega328
+F_CPU = 16000000UL  
 BAUD  = 9600UL
 ## Also try BAUD = 19200 or 38400 if you're feeling lucky.
 
